--- a/CodeScan/Info.plist
+++ b/CodeScan/Info.plist
@@ -46,6 +46,8 @@
 	<string>App needs to photo library to save your document </string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App needs to access camera to scan your document and provide you with accurate redsult</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Appneeds to save files</string>
 	<key>UILaunchImageFile~ipad</key>
 	<string>LaunchImagedata</string>
 	<key>UIMainStoryboardFile</key>
@@ -66,5 +68,9 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 </dict>
 </plist>
